Modification des liens Javascript et scss dans la page de base twig

--- a/application/template/base.html.twig
+++ b/application/template/base.html.twig
@@ -8,7 +8,7 @@
     <!--Importer la police d'icônes Google-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Importer materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="../../public/sass/materialize.scss"  media="screen,projection"/>
     
     <title>{% block title %}Base Twig{% endblock title %} </title>
     {% endblock head %}
@@ -21,7 +21,7 @@
     <footer>
         {% block javascript %}
         <!--Lien JavaScript materialize-->
-        <script type="text/javascript" src="js/materialize.min.js"></script>
+        <script type="text/javascript" src="../../public/js/materialize.min.js"></script>
         {% endblock javascript %}
     </footer> 
 </body>
