--- a/application/template/base.html.twig
+++ b/application/template/base.html.twig
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     {% block head %}
     <meta charset="UTF-8">
@@ -8,14 +9,32 @@
     <!--Importer la police d'icônes Google-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Importer materialize.css-->
-    <link type="text/css" rel="stylesheet" href="../../public/sass/materialize.scss"  media="screen,projection"/>
-    
+    <link type="text/css" rel="stylesheet" href="../../public/sass/materialize.scss" media="screen,projection" />
+
     <title>{% block title %}Base Twig{% endblock title %} </title>
     {% endblock head %}
 </head>
+
 <body>
     <main>
         {% block content %}
+        <nav>
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo">Logo</a>
+                <form>
+                    <div class="input-field">
+                        <input id="search" type="search" required>
+                        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                        <i class="material-icons">close</i>
+                    </div>
+                </form>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="sass.html">Sass</a></li>
+                    <li><a href="badges.html">Components</a></li>
+                    <li><a href="collapsible.html">JavaScript</a></li>
+                </ul>
+            </div>
+        </nav>
         {% endblock content %}
     </main>
     <footer>
@@ -23,6 +42,7 @@
         <!--Lien JavaScript materialize-->
         <script type="text/javascript" src="../../public/js/materialize.min.js"></script>
         {% endblock javascript %}
-    </footer> 
+    </footer>
 </body>
+
 </html>
