--- a/application/template/base.html.twig
+++ b/application/template/base.html.twig
@@ -81,7 +81,9 @@
                 </form>
             </div>
         </nav>
-
+{% block add %}
+    
+{% endblock add %}
     </main>
     <footer>
 
@@ -97,6 +99,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
     </script>
+    <!--fontawesome-->
+    <script src="https://kit.fontawesome.com/7fbb9a7a75.js" crossorigin="anonymous"></script>
     {% endblock javascript %}
 </body>
 
