--- a/application/template/pages/index.html.twig
+++ b/application/template/pages/index.html.twig
@@ -1,9 +1,60 @@
 {% extends "./base.html.twig" %}
-{% block title %}Liste des annonces{% endblock title %}
+{% block title %}listes des annonces{% endblock title %}
 {% block add %}
-<div>
-    {% for annonce in liste_annonces %}
+<div class="container">
   
-    {% endfor %}
+      
+    {% for annonce in listes_annonces %}
+    <div class="col-sm-12 col-md-6 col-lg-4 card" style="width: 28rem;">
+        <img class="card-img-top" src="../.../../public/assets/medias/jouets.jpg" alt="image catégorie produit ">
+        <div class="card-body d-flex justify-content-between  ">
+          <h5 class="card-title">{{annonce.ann_titre}}</h5>
+          <p class="card-text"><span style="color: red;">{{annonce.ann_prix}} <i class="fas fa-euro-sign"></i></span></p>
+        </div>
+        <ul class="list-group ">
+          <li class="list-group-item"> {{annonce.categorie_id}}</li>
+          
+          <li class="list-group-item"><i class="fas fa-globe"></i> {{annonce.ann_description}} </li>
+         
+          <li class="list-group-item"><i class="fas fa-map-marker-alt"></i> {{annonce.utilisateur_id}}</li>
+     
+          <li class="list-group-item">publié le {{annonce.ann_date_ecriture|date("d/m/Y")}}</li>
+          {# <li class="list-group-item">Fin de garantie le {{produit.date_fin_garantie|date("d/m/Y")}}</li> #}
+          {# <li class="list-group-item conseils">Conseils : {{produit.conseil_entretien}}</li> #}
+          <li class="list-group-item"><i class="fas fa-ticket-alt"></i> <a href="media/{{produit.ticket_achat}}"
+              target="_blank">Voir le ticket d'achat</a></li>
+          <li class="list-group-item"><i class="fas fa-clipboard-list"></i> <a href="media/{{produit.manuel}}"
+              target="_blank">Voir le manuel d'utilisation</a></li>
+        </ul>
+        <div class="card-body d-flex justify-content-between align-items-center">
+          <a href="modifier.php?id={{annonce.id}}" class="btn btn-info"><i class="far   fa-edit"></i></a>
+          <button class="btn btn-info" data-toggle="modal" data-target="#supprimerProduit{{annonce.id}}"><i
+              class="far  fa-trash-alt"></i></button>
+            </div>
+            <div class="modal fade" role="dialog" style="margin-top:250px;" id="supprimerProduit{{annonce.id}}" tabindex="-1"
+              data-backdrop="true" aria-labelledby="exampleModalLabel"  aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Etes-vous sûr!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"> &times;</button>
+                  </div>
+                  <div class="modal-body text-center pagination-centered">
+                    <p>Voulez-vous vraiment supprimer cet enregistrement?</p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">Annuler</button>
+                    <a href="supprimer.php?id={{annonce.id}}" class="btn btn-primary">Supprimer</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+            
+        
+            {% endfor %}
+        
+
+    
 </div>
 {% endblock add %}
