--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,4 +16,27 @@
   border-color: #b87508 !important;
 }
 
+.mw-500 {
+  max-width: 500px;
+}
+
+.mh-500 {
+  max-height: 500px;
+}
+
+.fs-20 {
+  font-size: 20px;
+}
+
+.page-load-status {
+  display: none;
+  /* hidden by default */
+  padding-top: 20px;
+  border-top: 1px solid #DDD;
+  text-align: center;
+  color: #777;
+}
+
+/* loader ellips in separate pen CSS */
+
 /*# sourceMappingURL=style.css.map */
