--- a/application/template/base.html.twig
+++ b/application/template/base.html.twig
@@ -8,23 +8,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Importer la police d'icônes Google-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+    <!--Lien page de style-->
     <link href="css/style.css" rel="stylesheet">
+    <!--Jquery CDN-->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!--Lien CDN Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
     </script>
-
+    <!--Titre-->
     <title>{% block title %}Base Twig{% endblock title %} </title>
     {% endblock head %}
 </head>
 
 <body>
     <main>
-        <!--Navbar-->
-        <nav class="navbar navbar-dark bg-dark justify-content-between">
+        <!--Barre de navigation-->
+        <nav class="navbar navbar-dark bg-dark justify-content-between mb-5">
             <div class="container">
                 <a class="navbar-brand" href="#">LamaShop</a>
                 <div class="d-flex">
@@ -52,29 +54,19 @@
 {% endblock add %}
     </main>
     <footer>
-
     </footer>
     {% block javascript %}
     <!--Lien JavaScript Bootstrap-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
         integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
     </script>
-    <!--fontawesome-->
-    <script src="https://kit.fontawesome.com/7fbb9a7a75.js" crossorigin="anonymous"></script>
+    <!--Infinite scroll-->
+    <script src="../public/assets/node_modules/infinite-scroll/dist/infinite-scroll.pkgd.js"></script>
+    <script src="../public/js/app.js"></script>
+    
     {% endblock javascript %}
 </body>
-
 </html>
-<!-- Formulaire de recherche 
-                <form class="form-inline">
-                    <div class="my-0">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                        </div>
-                    </form>
-                    -->
