--- a/application/template/base.html.twig
+++ b/application/template/base.html.twig
@@ -10,14 +10,12 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Lien page de style-->
     <link href="css/style.css" rel="stylesheet">
-    <!--Jquery CDN-->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <!--Lien CDN Bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
-    </script>
+    <!--Lien CDN CSS Bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    {# CDN jQuery #}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <!--Titre-->
     <title>{% block title %}Base Twig{% endblock title %} </title>
     {% endblock head %}
@@ -32,12 +30,15 @@
                 <div class="d-flex">
                     <!-- Formulaire de recherche -->
                     <form class="form-inline mr-4">
-                        <select class="custom-select rounded-0 bg-danger text-light border-0 font-weight-bold" id="SearchForm">
+                        <select class="custom-select rounded-0 bg-danger text-light border-0 font-weight-bold"
+                            id="SearchForm">
                             <option selected>Catégories</option>
                             <option value="Immobilier">Immobilier</option>
                         </select>
-                        <input class="form-control rounded-0 border-0" type="search" placeholder="Une petite envie ?" aria-label="Search">
-                        <button class="btn rounded-0 rounded-right d-flex bg-danger" type="submit"><i class="material-icons text-light">search</i></button>
+                        <input class="form-control rounded-0 border-0" type="search" placeholder="Une petite envie ?"
+                            aria-label="Search">
+                        <button class="btn rounded-0 rounded-right d-flex bg-danger" type="submit"><i
+                                class="material-icons text-light">search</i></button>
                     </form>
                     <!-- Lien vers page poster -->
                     <a href="#" class="btn btn-danger d-flex p-2" type="button">
@@ -49,24 +50,25 @@
                 </div>
             </div>
         </nav>
-{% block add %}
-    
-{% endblock add %}
+        {% block add %}
+
+        {% endblock add %}
     </main>
     <footer>
     </footer>
     {% block javascript %}
-    <!--Lien JavaScript Bootstrap-->
+    <!--Js-->
+    <script src="../public/js/app.js"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
         integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
     </script>
-    <!--Infinite scroll-->
-    <script src="../public/assets/node_modules/infinite-scroll/dist/infinite-scroll.pkgd.js"></script>
-    <script src="../public/js/app.js"></script>
-    
+
     {% endblock javascript %}
+
 </body>
+
 </html>
