Mise en page du chargement des annonces

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,13 +28,14 @@
   font-size: 20px;
 }
 
-.page-load-status {
-  display: none;
-  /* hidden by default */
-  padding-top: 20px;
-  border-top: 1px solid #DDD;
+.ajax-loader {
+  display: block;
   text-align: center;
-  color: #777;
+}
+
+.ajax-loader img {
+  width: 50px;
+  vertical-align: middle;
 }
 
 /* loader ellips in separate pen CSS */
