--- a/application/template/pages/poster.html.twig
+++ b/application/template/pages/poster.html.twig
@@ -4,6 +4,7 @@
 <div class="container">
       <div class="row">
             <div class="col-12">
+                  {{ dump(nouvelinsertion) }}
 
                   <center>
                         <h3>Formulaire de publication d'annonce</h3>
@@ -44,14 +45,15 @@
                               </div>
                               <div class="form-group col-sm-12 col-md-6 col-lg-6">
                                     <label for="example4">Quelle catégorie fait partie votre annonce.</label>
-                                    <select class="form-control" name="categorie" id="example4">
+                                    <input list="categories" id="example4" class="form-control" name="categorie">
+                                    <datalist id="categories"  >
                                           <option value="selected">Faites votre choix</option>
                                           <option value ="animalerie">Animalerie</option>
                                           <option value="emploi">Emploi</option>
                                           <option value="auto/moto">Auto/Moto</option>
                                           <option value="bricolage">Bricolage</option>
                                           <option value="maison">Maison</option>
-                                    </select>
+                                    </datalist>
                               </div>
 
                         </div>
