Lien vers page poster dans header

--- a/application/template/base.html.twig
+++ b/application/template/base.html.twig
@@ -41,7 +41,7 @@
                                 class="material-icons text-light">search</i></button>
                     </form>
                     <!-- Lien vers page poster -->
-                    <a href="#" class="btn btn-danger d-flex p-2" type="button">
+                    <a href="poster" class="btn btn-danger d-flex p-2" type="button">
                         <span class="d-flex mr-2">
                             <i class="material-icons">add_circle_outline</i>
                         </span>
