--- a/application/template/pages/ajouterAnnonce.html.twig
+++ b/application/template/pages/ajouterAnnonce.html.twig
@@ -11,7 +11,7 @@
          <a href="" class="btn bg-danger">Télécharger PDF</a>
        </div>
      </div>
-     <img class="fit-picture mw-500 mh-500" src="../public/assets/medias/{{annonce.ann_image_nom}}.jpg"
+     <img class="fit-picture mw-500 mh-500" src="../public/assets/medias/{{annonce.ann_image_url}}"
        alt="{{annonce.ann_image_nom}}">
    </div>
 
