Modification des page twig

--- a/application/template/pages/index.html.twig
+++ b/application/template/pages/index.html.twig
@@ -13,6 +13,8 @@
         <div>
           <a href="" class="btn bg-danger">Détails</a>
           <a href="" class="btn bg-danger">Télécharger PDF</a>
+          <a href="" class="btn bg-danger">Modifier</a>
+          <a href="" class="btn bg-danger">Supprimer</a>
         </div>
       </div>
       <img class="fit-picture mw-500 mh-500" src="../public/assets/medias/{{annonce.ann_image_url}}"
