--- a/application/template/base.html.twig
+++ b/application/template/base.html.twig
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     {% block head %}
     <meta charset="UTF-8">
@@ -10,12 +9,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Lien page de style-->
     <link href="css/style.css" rel="stylesheet">
+    <link href="dropzone-5.7.0\dist\basic.css" rel="stylesheet">
+    <link href="dropzone-5.7.0\dist\dropzone.css" rel="stylesheet">
+    
     <!--Lien CDN CSS Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     {# CDN jQuery #}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <!--Lien dropzone-->
+    <script src="dropzone-5.7.0\dist\dropzone.js"></script>dropzone-5.7.0\dist\dropzone.js
     <!--Titre-->
     <title>{% block title %}Base Twig{% endblock title %} </title>
     {% endblock head %}
@@ -26,7 +29,7 @@
         <!--Barre de navigation-->
         <nav class="navbar navbar-dark bg-dark justify-content-between mb-5">
             <div class="container">
-                <a class="navbar-brand" href="#">LamaShop</a>
+                <a class="navbar-brand" href="accueil">LamaShop</a>
                 <div class="d-flex">
                     <!-- Formulaire de recherche -->
                     <form class="form-inline mr-4">
@@ -58,7 +61,9 @@
     </footer>
     {% block javascript %}
     <!--Js-->
-    <script src="../public/js/app.js"></script>
+    <script src="../public/js/infiniteScroll.js"></script>
+    <script src="../public/js/dragAndDrop.js"></script>
+    <script src="../public/js/formValidation.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
         integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
