--- a/application/template/pages/modifier.html.twig
+++ b/application/template/pages/modifier.html.twig
@@ -1,6 +1,87 @@
 {% extends "./base.html.twig" %}
 {% block title %}Modifier une annonce{% endblock title %}
 {% block add %}
+<div class="container">
+    <div class="row">
+        <div class="col-12">
 
-        
+            <center>
+                <h1 class="mb-5">Poster une annonce</h1>
+            </center>
+            <form action="poster" method="POST" enctype="multipart/form-data">
+                <div class="form-row">
+                    <div class="form-group col-sm-12 col-md-6 col-lg-6 ">
+                        <label for="exampleCheck1">Nom</label>
+                        <input type="text" name="nom" class="form-control" id="exampleCheck1">
+                    </div>
+
+                    <div class="form-group col-sm-12 col-md-6 col-lg-6">
+                        <label for="exampleInputPassword1 ">Prenom</label>
+                        <input type="text" name="prenom" class="form-control" id="exampleInputPassword1">
+                    </div>
+
+                </div>
+
+                <div class="form-row">
+
+                    <div class="form-group col-sm-12 col-md-6 col-lg-6">
+                        <label for="exampleInputEmail1">Email</label>
+                        <input type="email" name="email" class="form-control" id="exampleInputEmail1"
+                            aria-describedby="emailHelp">
+                    </div>
+                    <div class="form-group  col-sm-12 col-md-6 col-lg-6">
+                        <label for="exampletel">Téléphone</label>
+                        <input type="text" name="telephone" class="form-control" id="exampletel">
+                    </div>
+
+                </div>
+
+                <div class="form-row">
+
+                    <div class="form-group col-sm-12 col-md-6 col-lg-6">
+                        <label for="example3">Prix en euros</label>
+                        <input type="text" name="prix" class="form-control" id="example3">
+                    </div>
+                    <div class="form-group col-sm-12 col-md-6 col-lg-6">
+                        <label for="example4">Catégorie</label>
+                        <select class="form-control" name="categorie" id="example4">
+                            <option value="selected">Faites votre choix</option>
+                        </select>
+                        <select name="categorie" class="custom-select" id="categorie">
+                            {% set categoriesarray = ["Loisirs", "Vêtements", "Multimédia", "jeux & jouets", "Vélos", "Téléphonie", "Electroménager", "Bricolage", "Maison", "Mode", "Autres" ] %}
+                            {% for categories in categoriesarray %}
+                            {% set select = '' %}
+                            {% if categories == varcategorie %}
+                            {% set select = 'selected' %}
+                            {% endif %}
+                            <option value="{{categories}}" {{select }}>{{categories}}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+
+                </div>
+                <div class="dropzone needsclick text-center" id="demo-upload" action="poster">
+                    <div class="dz-message needsclick">
+                        <i class="material-icons display-3 text-danger">cloud_download</i>
+                        Déposer votre image ou cliquer dans la zone
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-sm-12 col-md-12 col-lg-12 mt-3">
+                        <label for="desc">Description de votre annonce</label>
+                        <textarea name="description" class="form-control rounded-0" id="desc" cols="30"
+                            rows="3"></textarea>
+                    </div>
+                    <div class="form-group col-sm-12 col-md-12 col-lg-12">
+
+                        <button type="submit" value="ajouter"
+                            class="btn bg-danger btn-primary btn-lg btn-block border-0">Envoyer</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+    </div>
+</div>
+
 {% endblock add %}
