--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,27 @@
   vertical-align: middle;
 }
 
+.dropzone {
+  background: #f2f2f2;
+  border-radius: 5px;
+  border: 2px dashed #0087f7;
+  border-image: none;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#icon-delete {
+  width: min-content;
+  display: flex;
+  margin: 0 auto;
+}
+
+#icon-delete i {
+  font-size: 3rem;
+  cursor: pointer;
+}
+
 /* loader ellips in separate pen CSS */
 
 /*# sourceMappingURL=style.css.map */
