--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -33,5 +33,22 @@ $secondary-color: #b87508;
     width: 50px;
     vertical-align: middle;
 }
-
+.dropzone {
+    background: #f2f2f2;
+    border-radius: 5px;
+    border: 2px dashed rgb(0, 135, 247);
+    border-image: none;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+#icon-delete{
+    width: min-content;
+    display: flex;
+    margin:0 auto;
+}
+#icon-delete i{
+    font-size: 3rem;
+    cursor: pointer;
+}
 /* loader ellips in separate pen CSS */
