Suppression mauvais texte

--- a/application/template/base.html.twig
+++ b/application/template/base.html.twig
@@ -18,7 +18,7 @@
     {# CDN jQuery #}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Lien dropzone-->
-    <script src="dropzone-5.7.0\dist\dropzone.js"></script>dropzone-5.7.0\dist\dropzone.js
+    <script src="dropzone-5.7.0\dist\dropzone.js"></script>
     <!--Titre-->
     <title>{% block title %}Base Twig{% endblock title %} </title>
     {% endblock head %}
