Modificaiton des pages twig du site

--- a/application/template/base.html.twig
+++ b/application/template/base.html.twig
@@ -27,30 +27,30 @@
 <body>
     <main>
         <!--Barre de navigation-->
-        <nav class="navbar navbar-dark bg-dark justify-content-between mb-5">
-            <div class="container">
+        <nav class="navbar navbar-dark bg-dark mb-5">
+            <div class="row col-12 justify-content-between">
                 <a class="navbar-brand" href="accueil">LamaShop</a>
-                <div class="d-flex">
-                    <!-- Formulaire de recherche -->
-                    <form class="form-inline mr-4">
-                        <select class="custom-select rounded-0 bg-danger text-light border-0 font-weight-bold"
-                            id="SearchForm">
-                            <option selected>Catégories</option>
-                            <option value="Immobilier">Immobilier</option>
-                        </select>
-                        <input class="form-control rounded-0 border-0" type="search" placeholder="Une petite envie ?"
-                            aria-label="Search">
-                        <button class="btn rounded-0 rounded-right d-flex bg-danger" type="submit"><i
-                                class="material-icons text-light">search</i></button>
-                    </form>
-                    <!-- Lien vers page poster -->
-                    <a href="poster" class="btn btn-danger d-flex p-2" type="button">
-                        <span class="d-flex mr-2">
-                            <i class="material-icons">add_circle_outline</i>
-                        </span>
-                        <span class="font-weight-bold">Poster une annonce</span>
-                    </a>
-                </div>
+                
+                <!-- Formulaire de recherche -->
+                <form class="search-bar form-inline justify-content-center mr-4">
+                    <select class="custom-select bg-danger text-light border-0 font-weight-bold cursor-pointer"
+                        id="SearchForm">
+                        <option selected>Catégories</option>
+                        <option value="Immobilier">Immobilier</option>
+                    </select>
+                    <input class="form-control rounded-0 border-0 col-lg-8" type="search" placeholder="Une petite envie ?"
+                        aria-label="Search">
+                    <button class="btn d-flex jusify-content-center bg-danger" type="submit"><i
+                            class="material-icons text-light">search</i></button>
+                </form>
+                <!-- Lien vers page poster -->
+                <a href="poster" class="btn btn-danger d-flex p-2" type="button">
+                    <span class="d-flex mr-2">
+                        <i class="material-icons">add_circle_outline</i>
+                    </span>
+                    <span class="font-weight-bold">Poster une annonce</span>
+                </a>
+                
             </div>
         </nav>
         {% block add %}
