--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -27,6 +27,11 @@ $secondary-color: #b87508;
 .cursor-pointer{
     cursor: pointer;
 }
+.scroller-item{
+    transition: all 1s ease-in;
+}
+
+
 .ajax-loader {
     display: block;
     text-align: center;
@@ -79,6 +84,25 @@ $secondary-color: #b87508;
     .scroller-item {
         flex-direction: column-reverse;
         align-items: center;
+    }
+}
+@media (min-width: 570px) and (max-width: 720px){
+    .btn-annonce {
+        flex-direction: column;
+    }
+    .btn-annonce a:first-child{
+        margin-bottom:0.5rem !important;
+    }
+    .btn-annonce a:last-child{
+        margin:0 !important;
+    }
+    // .annonce-text > *{
+    //     margin: 0;
+    // }
+}
+@media (max-width: 800px){
+    .search-bar{
+        display: none!important;
     }
 }
 /* loader ellips in separate pen CSS */
