--- a/application/template/pages/index.html.twig
+++ b/application/template/pages/index.html.twig
@@ -3,13 +3,13 @@
 {% block add %}
 <div class="px-4 flex-wrap d-flex justify-content-around" id="scroller-layout">
   {% for annonce in listes_annonces %}
-  <div class="scroller-item d-flex justify-content-between text-dark border border-dark bg-light p-2 mb-2 col-lg-5" id="{{annonce.ann_id}}">
-    <div class="d-flex justify-content-between flex-column">
+  <div class="scroller-item d-flex justify-content-between text-dark border border-dark flex-xl-row flex-column-reverse bg-light p-2 mb-5 col-lg-5 col-sm-5 col-10" id="{{annonce.ann_id}}">
+    <div class="annonce-text d-flex justify-content-between flex-column text-center text-xl-left">
         <h2>{{annonce.ann_titre}}</h2>
         <p class="text-danger ml-2 prix">{{annonce.ann_prix}} €</p>
         <p class="ml-2 font-italic">{{annonce.cat_libelle}}</p>
         <p class="ml-2 font-weight-bold">Le {{annonce.ann_date_ecriture|date('j m Y')}}</p>
-        <div class="d-flex">
+        <div class="d-flex justify-content-center btn-annonce">
           <a href="annonce/{{annonce.ann_id}}" class="btn bg-danger text-light d-flex justify-content-center">
             <i class="material-icons mr-2">pageview</i>
             <span>Détails</span>
@@ -27,15 +27,15 @@
       {% else %}
       {% set image = annonce.cat_libelle %}
       {% endif %}
-      <div class="d-flex align-items-center justify-content-xl-end p-0 col-xl-6 col-lg-12">
-        <img class="fit-picture mw-500 mh-500 card-img-top" src="../public/assets/medias/{{image}}"
+      <div class="d-flex align-items-center justify-content-xl-end justify-content-lg-center justify-content-md-end justify-content-center p-0 ml-2">
+        <img class="fit-picture mw-500 mh-500 img-fluid" src="../public/assets/medias/{{image}}"
           alt="{{annonce.ann_image_nom}}">
       </div>
     
   </div>
 
   {% endfor %}
-  <div id="first-loader" class="ajax-loader text-center m-2" value={{Nbr_annonces}}>
+  <div id="first-loader" class="ajax-loader text-center col-12 mb-5 d-none" value={{Nbr_annonces}}>
     <img src="https://media2.giphy.com/media/sSgvbe1m3n93G/giphy.gif">
   </div>
 </div>
