--- a/application/template/base.html.twig
+++ b/application/template/base.html.twig
@@ -27,7 +27,7 @@
 <body>
     <main>
         <!--Barre de navigation-->
-        <nav class="navbar navbar-dark bg-dark mb-5">
+        <nav class="navbar navbar-dark bg-dark">
             <div class="row col-12 justify-content-between">
                 <a class="navbar-brand" href="accueil">LamaShop</a>
                 
