--- a/application/template/pages/poster.html.twig
+++ b/application/template/pages/poster.html.twig
@@ -5,7 +5,7 @@
       <div class="row">
             <div class="col-12">
                   <center>
-                        <h1 class="mb-5">Poster une annonce</h1>
+                        <h1 class="my-3">Poster une annonce</h1>
                   </center>
                   <form action="poster" method="POST" class="needs-validation" enctype="multipart/form-data" novalidate>
                         <div class="d-flex mx-auto flex-column col-sm-12 col-md-12 col-lg-12 mb-3 p-0">
